<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_top_stories"
        android:checkable="true"
        android:checked="true"
        android:title="@string/top_stories" />
    <item
        android:id="@+id/menu_new_stories"
        android:checkable="true"
        android:title="@string/new_stories" />
    <item
        android:id="@+id/menu_best_stories"
        android:checkable="true"
        android:title="@string/best_stories" />

    <item
        android:id="@+id/menu_ask_stories"
        android:checkable="true"
        android:title="@string/ask_stories" />
    <item
        android:id="@+id/menu_show_stories"
        android:checkable="true"
        android:title="@string/show_stories" />
    <item
        android:id="@+id/menu_job_stories"
        android:checkable="true"
        android:title="@string/job_stories" />
</menu>